--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@
 {
 	margin-left: 10%;
 }
+div.date, div.category, div.tag 
+{
+	margin-right: 10px;
+	margin-left: 10px;
+	display: inline-block;
+}
