--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
 }
 div.date, div.category, div.tag 
 {
+	background-color: rgb(250,250,250);
+	color: rgb(0,0,0);
 	margin-right: 10px;
 	margin-left: 10px;
 	display: inline-block;
