--- a/style.css
+++ b/style.css
@@ -10,13 +10,15 @@
 }
 div.date, div.category, div.tag 
 {
-	color: rgb(250,250,250);
-	background-color: rgb(50,50,50);
-	border: 10px solid rgb(20,20,20);
-	padding-left: 10px;
-	padding-right: 10px;
-
 	margin-right: 10px;
 	margin-left: 10px;
 	display: inline-block;
+}
+div.date, div.category, div.tag, div.title, div.mainPost, div.footNote 
+{
+	color: rgb(250, 250, 250);
+	background-color: rgb(50, 50, 50);
+	border: 10px solid rgb(20, 20, 20);
+	padding-left: 10px;
+	padding-right: 10px;
 }
