--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ div.date, div.category, div.tag
 {
 	margin-right: 10px;
 	margin-left: 10px;
+	margin-bottom: 10px;
 	display: inline-block;
 }
 div.date, div.category, div.tag, div.title, div.mainPost, div.footNote 
