--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div.date, div.category, div.tag
 {
 	display: inline-block;
 }
-div.date, div.category, div.tag, div.mainPost, div.footNote
+div.date, div.category, div.tag, div.title, div.mainPost, div.footNote
 {
 	color: rgb(250, 250, 250);
 	background-color: rgb(20, 20, 20);
@@ -24,6 +24,4 @@ div.date, div.category, div.tag, div.mainPost, div.footNote
 div.title
 {
 	text-align: center;
-	padding-left: 10px;
-	padding-right: 10px;
 }
