--- a/style.css
+++ b/style.css
@@ -27,5 +27,6 @@ div.title
 }
 div.blogPost
 {
-	background: url(./pages/8-24-2014.jpeg) no-repeat;
+	background: url(./pages/8-24-2014.jpg) no-repeat;
+	background-size: cover;
 }
