--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ div.date, div.category, div.tag, div.title, div.mainPost, div.footNote
 	border: 10px solid rgb(50, 50, 50);
 	padding-left: 10px;
 	padding-right: 10px;
-	margin: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-bottom: 50px;
 }
 div.title
 {
