--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body
 #personalInfo
 {
 	margin-left: 10%;
+	margin-right: 20%;
 	background-color: rgb(250, 250, 250);
 }
 div.date, div.category, div.tag 
