--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body
 #personalInfo
 {
 	margin-left: 10%;
-	margin-right: 20%;
+	margin-right: 35%;
+	text-align: center;
 	background-color: rgb(250, 250, 250);
 }
 div.date, div.category, div.tag 
