--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body
 	margin-right: 35%;
 	text-align: center;
 	background-color: rgb(250, 250, 250);
+	border-radius: 25px;
+	background: url(./pictures/titlePicture.jpg) no-repeat;
+	background-size: cover;
 }
 div.date, div.category, div.tag 
 {
