--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body
 	margin-left: 10%;
 	margin-right: 35%;
 	text-align: center;
-	background-color: rgb(250, 250, 250);
+	color: rgb(250, 250, 250);
 	border-radius: 25px;
 }
 div.date, div.category, div.tag 
