--- a/style.css
+++ b/style.css
@@ -38,6 +38,6 @@ div.title
 }
 div.blogPost
 {
-	background: url(./pictures/mountains.jpeg) no-repeat;
+	background: url(./pictures/mountains.jpg) no-repeat;
 	background-size: cover;
 }
