--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ div.title
 }
 div.blogPost
 {
-	background: url(./pictures/mountains.jpg) no-repeat;
+	/*background: url(./pictures/mountains.jpg) no-repeat;*/
 	background-size: cover;
 	padding-top: 10px;
 	padding-bottom: 10px;
