--- a/style.css
+++ b/style.css
@@ -36,8 +36,7 @@ div.title
 }
 div.blogPost
 {
-	/*background: url(./pictures/mountains.jpg) no-repeat;*/
-	background-size: cover;
+	/*background-size: cover;*/
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-bottom: 10px;
