--- a/style.css
+++ b/style.css
@@ -40,3 +40,19 @@ div.blogPost
 	padding-bottom: 10px;
 	margin-bottom: 10px;
 }
+
+div.button
+{
+	background-color: rgb(128,128,128);
+	border-radius:20px;
+	color: rgb(0,0,0);
+	font-size: 20px;
+	cursor: pointer;
+	border:none;
+}
+
+button:hover
+{
+	background:rgb(50,50,50);
+	box-shadow: 0px 0px 1px rgb(0,0,0);
+}
