--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ div.blogPost
 	margin-bottom: 10px;
 }
 
-button
+.buttons button
 {
 	background-color: rgb(128,128,128);
 	border-radius:20px;
@@ -51,7 +51,7 @@ button
 	border:none;
 }
 
-button:hover
+.buttons button:hover
 {
 	background:rgb(50,50,50);
 	box-shadow: 0px 0px 1px rgb(0,0,0);
