Added the structure for the portfolio.  All that is left is to create the portfolio.

--- a/style.css
+++ b/style.css
@@ -57,3 +57,8 @@ div.blogPost
 	box-shadow: 0px 0px 1px rgb(0,0,0);
 	transition-duration: .5s;
 }
+
+div.hey button.portfoliobutton
+{
+	display: block;
+}
