--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ div.blogPost
 	margin-bottom: 10px;
 }
 
+div.headercontent
+{
+	display: block;
+	margin-bottom: 5px;
+}
+
 div.buttons button
 {
 	background-color: rgb(128,128,128);
