--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body
 	background-color: rgb(20, 20, 20);
 }
 
-.personalInfo, div.content
+.personalInfo, #content
 {
 	margin-left: 10%;
 	margin-right: 35%;
