--- a/style.css
+++ b/style.css
@@ -75,6 +75,8 @@ div.buttons button:hover, #assignments a:hover, #links button.portfoliobutton:ho
 
 #assignments a
 {
-	margin-bottom: 4px;
 	display: block;
+	width: 200px;
+	margin auto;
+	margin-bottom: 4px;
 }
