Added margin for buttons

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ div.buttons button:hover, #assignments a:hover, #links button.portfoliobutton:ho
 #links button.portfoliobutton
 {
 	margin-bottom: 4px;
+	margin-top: 4px;
 	display: block;
 }
 
