--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body
 {
-	background-color: rgb(0, 0, 0);
+	background-color: rgb(60, 60, 60);
 }
 
 #resume
@@ -21,4 +21,13 @@ body
 {
 	text-decoration: none;
 	font-size: 2.5em;
+}
+
+#resume ul li a:hover
+{
+	background: rgb(100, 100, 100);
+	box-shadow: 0px 0px 1px rgb(0, 0, 0);
+	border-radius: 15px;
+	transition-duration: .5s;
+
 }
