--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body
 {
-	background-color: rgb(60, 60, 60);
+	background-color: rgb(128, 128, 128);
 }
 
 #resume
@@ -8,7 +8,6 @@ body
 	margin: auto;
 	width: 40%;
 	text-align: center;
-	background-color: rgb(128, 128, 128);
 	border-radius: 25px;
 }
 
@@ -21,6 +20,9 @@ body
 {
 	text-decoration: none;
 	font-size: 2.5em;
+	border-radius: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 #resume ul li a:hover
