--- a/css/index.css
+++ b/css/index.css
@@ -18,17 +18,19 @@ body
 
 #resume ul li a
 {
+	background: rgb(50, 50, 50);
 	text-decoration: none;
 	font-size: 2.5em;
 	border-radius: 5px;
 	padding-top: 5px;
 	padding-bottom: 5px;
+	box-shadow: 0px 0px 10px rgb(0, 0, 0);
 }
 
 #resume ul li a:hover
 {
 	background: rgb(100, 100, 100);
-	box-shadow: 0px 0px 1px rgb(0, 0, 0);
+
 	border-radius: 15px;
 	transition-duration: .5s;
 
