--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,7 @@ body
 #resume ul li a
 {
 	background: rgb(50, 50, 50);
+	color: rgb(0, 0, 0);
 	text-decoration: none;
 	font-size: 2.5em;
 	border-radius: 5px;
@@ -31,7 +32,6 @@ body
 #resume ul li a:hover
 {
 	background: rgb(100, 100, 100);
-
 	border-radius: 15px;
 	transition-duration: .5s;
 
