--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body
 	background-color: rgb(128, 128, 128);
 }
 
-#resume
+#content
 {
 	margin: auto;
 	width: 40%;
@@ -11,13 +11,13 @@ body
 	border-radius: 25px;
 }
 
-#resume ul
+#content ul
 {
 	margin-top: 20%;
 	list-style-type: none;
 }
 
-#resume ul li a
+#content ul li a
 {
 	background: rgb(50, 50, 50);
 	color: rgb(0, 0, 0);
@@ -29,7 +29,7 @@ body
 	box-shadow: 0px 0px 10px rgb(0, 0, 0);
 }
 
-#resume ul li a:hover
+#content ul li a:hover
 {
 	background: rgb(100, 100, 100);
 	border-radius: 15px;
