--- a/css/index.css
+++ b/css/index.css
@@ -11,13 +11,13 @@ body
 	border-radius: 25px;
 }
 
-#content ul
+/*#content ul
 {
 	margin-top: 20%;
 	list-style-type: none;
-}
+}*/
 
-#content ul li a
+#content a
 {
 	background: rgb(50, 50, 50);
 	color: rgb(0, 0, 0);
@@ -29,7 +29,7 @@ body
 	box-shadow: 0px 0px 10px rgb(0, 0, 0);
 }
 
-#content ul li a:hover
+#content a:hover
 {
 	background: rgb(100, 100, 100);
 	border-radius: 15px;
