--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ body
 	padding-top: 5px;
 	padding-bottom: 5px;
 	box-shadow: 0px 0px 10px rgb(0, 0, 0);
+	transition-duration: .5s;
 }
 
 #content a:hover
