--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,12 @@
 	margin-left: 5px;
 }
 
+#navbar ul li button {
+	padding: 0;
+	border: none;
+	background: none;
+}
+
 #content {
 	margin: 0px auto;
 	width: 90%;
