--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+body {
+	background-color: rgb(128, 128, 128);
+}
+
 #header {
 	margin-left: 2%;
 }
@@ -12,6 +16,7 @@
 	padding: 0;
 	border: none;
 	background: none;
+	color: rgb(64, 64, 64);
 }
 
 #content {
