--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body {
 
 #navbar ul li {
 	display: inline-block;
-	float: right;
+	float: right
 	margin-left: 5px;
 }
 
@@ -17,7 +17,15 @@ body {
 	border: none;
 	background: none;
 	background-color: rgb(64, 64, 64);
+	color: rgb(0, 0, 0);
 	font-size: 32;
+	border-radius: 20px;
+}
+
+#navbar ul li button:hover {
+	transition: 2s;
+	background-color: rgb(0, 0, 0);
+	color: rgb(64, 64, 64);
 }
 
 #content {
