--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body {
 
 #navbar ul li {
 	display: inline-block;
-	float: right
+	float: right;
 	margin-left: 5px;
 }
 
@@ -23,7 +23,7 @@ body {
 }
 
 #navbar ul li button:hover {
-	transition: 2s;
+	transition: 1s ease-in-out;
 	background-color: rgb(0, 0, 0);
 	color: rgb(64, 64, 64);
 }
