--- a/css/index.css
+++ b/css/index.css
@@ -20,10 +20,11 @@ body {
 	color: rgb(0, 0, 0);
 	font-size: 32;
 	border-radius: 20px;
+	transition: 1s;
 }
 
 #navbar ul li button:hover {
-	transition: 1s ease-in-out;
+	transition: 1s;
 	background-color: rgb(0, 0, 0);
 	color: rgb(64, 64, 64);
 }
