--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body {
 	margin-left: 5px;
 }
 
-#navbar ul li button {
+button.nav {
 	border: none;
 	background: none;
 	background-color: rgb(64, 64, 64);
@@ -23,13 +23,13 @@ body {
 	transition: 1s;
 }
 
-#navbar ul li button:hover {
+button.nav:hover {
 	transition: 1s;
 	background-color: rgb(0, 0, 0);
 	color: rgb(255, 255, 255);
 }
 
-#navbar ul li button:focus {
+button.nav:focus {
 	outline: 0;
 }
 
